<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:onClick="mainMenu"
        android:text="@string/menu" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="94dp"
        android:text="@string/answer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView2"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="49dp"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:text="@string/answer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal"
        android:text="@string/card_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/View01"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignLeft="@+id/currentCard"
        android:layout_below="@+id/currentCard"
        android:background="#ff909090" />

    <TextView
        android:id="@+id/cardTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/View01"
        android:gravity="center_horizontal"
        android:text="@string/card_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/usersAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick = "nextCard"
            android:text="@string/right" />

        <RadioButton
            android:id="@+id/wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick = "nextCard"
            android:text="@string/wrong" />
    </RadioGroup>

    <Button
        android:id="@+id/showAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usersAnswer"
        android:layout_centerHorizontal="true"
        android:onClick="showAnswer"
        android:text="Show Answer" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usersAnswer"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/usersAnswer" />

</RelativeLayout>